# vkx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/vkx/: AutoDeletable.hpp  Create.hpp  Dependable.hpp  Enumerate.hpp  Ext.hpp  Object.hpp  Tmp.hpp  TypeInfo.hpp  Utils.hpp  vkx.hpp
src/: Create.cpp  Enumerate.cpp
